Interfejs okna dodawania wydatków

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Swinka Skarbonka</string>
+    <string name="title_activity_dodawanie_wydatkow">Dodawanie_wydatkow</string>
 </resources>
